fixed layout bugs #8

--- a/src/pages/mainPage/mainPage.scss
+++ b/src/pages/mainPage/mainPage.scss
@@ -662,7 +662,7 @@
             height: 450px;
             position: absolute;
             left: 0;
-            bottom: -555px;
+            bottom: -420px;
             border-radius: 0 !important;
             padding: 24px 0 0 24px;
 
@@ -694,7 +694,7 @@
         }
 
         &__catalog {
-            margin-top: 600px;
+            margin-top: 470px;
         }
     }
 
@@ -715,15 +715,10 @@
             border-radius: 0 !important;
             padding: 24px 0px 48px 24px;
             height: 340px;
-            bottom: -480px;
 
             &-img {
                 width: 247px;
             }
-        }
-
-        &__catalog {
-            margin-top: 520px;
         }
     }
 
